# OctoPrint

./: .pre-commit-config.yaml  CONTRIBUTING.md  SUPPORTERS.md  Taskfile.yml  pyproject.toml
.github/: zizmor.yml
.github/ISSUE_TEMPLATE/: 01_bug_report.yml
.github/actions/e2e/: action.yml
.github/workflows/: add_to_backlog.yml  build.yml  cleanup.yml  issue_automation.yml  nightly_canary.yml  nightly_merge.yml  permissions_advisor.yml  pr_automation.yml  process_bundles.yml  sync.yml  test_install.yml  trigger_docker.yml  trigger_docs.yml
docs/api/: files.rst  printer.rst  push.rst
docs/development/: commits.md
docs/jsclientlib/: files.rst
docs/plugins/: distributing.rst
docs/plugins/examples/helloworld/: MANIFEST.in  Taskfile.yml  pyproject.toml
docs/sphinxext/: pydanticext.py
src/octoprint/: _version.py
src/octoprint/access/: users.py
src/octoprint/cli/: config.py
src/octoprint/filemanager/: __init__.py
src/octoprint/filemanager/storage/: __init__.py  local.py  printer.py
src/octoprint/plugins/achievements/: __init__.py  achievements.py
src/octoprint/plugins/discovery/: __init__.py
src/octoprint/plugins/errortracking/: __init__.py
src/octoprint/printer/: __init__.py  connection.py  standard.py
src/octoprint/schema/: __init__.py
src/octoprint/server/: views.py
src/octoprint/util/: comm.py
src/octoprint_setuptools/: __init__.py
tests/: test_daemon.py  test_octoprint_setuptools.py
tests/playwright/specs/: user-agents.spec.js
translations/: messages.pot
translations/de/LC_MESSAGES/: messages.po
(+57 files in other folders)
