[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "OctoPrint-Helloworld"
version = "1.0.0"
description = "A quick \"Hello World\" example plugin for OctoPrint"
authors = [
    { name = "Your Name", email = "you@somewhere.net" },
]
readme = {file = "README.md", content-type = "text/markdown"}
dynamic = [
    "license",
]

requires-python = ">=3.7,<4"

# any additional requirements (besides OctoPrint) should be listed here
dependencies = []

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = [
    "octoprint_helloworld",
    "octoprint_helloworld.*",
]

[project.entry-points."octoprint.plugin"]
helloworld = "octoprint_helloworld"

[project.urls]
Homepage = "https://github.com/yourGithubName/OctoPrint-Helloworld"

[project.optional-dependencies]
develop = [
    "go-task-bin",
]
